// Vitest Snapshot v1

exports[`lib/notion/update-date-extrapolation > updates extrapolated dates based on historical and recent dates > extrapolated-1 1`] = `
{
  "bulleted_list_item": {
    "rich_text": [
      {
        "text": {
          "content": "2022-10-16",
        },
      },
    ],
  },
  "object": "block",
  "type": "bulleted_list_item",
}
`;

exports[`lib/notion/update-date-extrapolation > updates extrapolated dates based on historical and recent dates > extrapolated-2 1`] = `
{
  "bulleted_list_item": {
    "rich_text": [
      {
        "text": {
          "content": "2022-11-18",
        },
      },
    ],
  },
  "object": "block",
  "type": "bulleted_list_item",
}
`;

exports[`lib/notion/update-date-extrapolation > updates extrapolated dates based on historical and recent dates > extrapolated-3 1`] = `
{
  "bulleted_list_item": {
    "rich_text": [
      {
        "text": {
          "content": "2022-12-21",
        },
      },
    ],
  },
  "object": "block",
  "type": "bulleted_list_item",
}
`;
